--- a/app/src/main/res/layout-sw600dp-land/activity_splash.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_splash.xml
@@ -7,64 +7,43 @@
         android:id="@+id/splashRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         tools:context="com.vipa.app.me.vipa.app.activities.splash.ui.ActivitySplash">
 
-        <ImageView
-            android:id="@+id/img_logo"
-            android:layout_width="243dp"
-            android:layout_height="100dp"
-            android:background="?attr/app_logo"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintDimensionRatio="H,16:9"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="M V   H U B   P L U S"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <RelativeLayout
-            android:id="@+id/flap_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/flap_border"
-            android:rotation="90"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
-            app:layout_constraintDimensionRatio="H,1:1"
-            app:layout_constraintStart_toStartOf="@id/progress_horizontal"
-            app:layout_constraintTop_toTopOf="parent"></RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/flap_view1"
+        <VideoView
+            android:id="@+id/videoView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FF3366FF"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/progress_horizontal"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ProgressBar
-            android:id="@+id/progress_horizontal"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:padding="0dp"
-            android:progress="0"
-            android:progressDrawable="@drawable/progress_drawable"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView" />
+            android:scaleType="fitXY"
+            />
+
+
+
+
+
+        <!--        <RelativeLayout-->
+        <!--            android:id="@+id/flap_view1"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:background="#009FFF"-->
+        <!--            android:visibility="gone"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@id/progress_horizontal"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+        <!--        <ProgressBar-->
+        <!--            android:id="@+id/progress_horizontal"-->
+        <!--            style="?android:attr/progressBarStyleHorizontal"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="5dp"-->
+        <!--            android:padding="0dp"-->
+        <!--            android:progress="0"-->
+        <!--            android:progressDrawable="@drawable/progress_drawable"-->
+        <!--            android:visibility="gone"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/textView" />-->
 
         <include
             android:id="@+id/no_connection_layout"
@@ -89,6 +68,7 @@
             android:layout_width="match_parent"
             android:gravity="center"
             android:visibility="gone"
+            android:indeterminateTint="@color/blue"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
