--- a/app/src/main/res/layout/live_detail.xml
+++ b/app/src/main/res/layout/live_detail.xml
@@ -211,9 +211,9 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentRight="true"
-                                        android:background="@drawable/bordrer_button"
+                                        android:background="@drawable/rounded_button"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                        android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:gravity="center"
                                         android:maxLines="3"
                                         android:paddingLeft="@dimen/detailMorePaddingLeft"
@@ -233,7 +233,7 @@
                                         android:layout_marginTop="2dp"
                                         android:background="@drawable/rounded_button"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                        android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:maxLines="3"
                                         android:paddingLeft="@dimen/movie_metadata_txt_show_hide_padding_left"
                                         android:paddingTop="@dimen/movie_metadata_txt_show_hide_padding_top"
@@ -260,7 +260,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_margin="3dp"
                                     android:background="@drawable/rounded_button"
-                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:paddingLeft="@dimen/NontonSize8"
                                     android:paddingTop="@dimen/NontonSize3"
                                     android:paddingRight="@dimen/NontonSize8"
@@ -307,7 +307,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                         android:maxLines="2"
                                         android:padding="5dp"
                                         android:text="@{expandabletext}"
